commit pre-modifiche canvas

--- a/PetrisNetsGame/app/src/main/res/layout/activity_game.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_game.xml
@@ -7,4 +7,25 @@
     tools:context=".GameActivity"
     android:background="@color/sfondo">
 
+    <TextView
+        android:id="@+id/playerTurnText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/button"
+        android:layout_width="63dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/button_pause"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_pause" />
 </androidx.constraintlayout.widget.ConstraintLayout>
