--- a/PetrisNetsGame/app/src/main/res/layout/activity_players.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_players.xml
@@ -26,8 +26,8 @@
         android:text="@string/player_1"
         android:textColor="@color/blue"
         android:textSize="17sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />
+        app:layout_constraintBottom_toTopOf="@+id/player1editText"
+        app:layout_constraintStart_toStartOf="@+id/player1editText" />
 
     <TextView
         android:id="@+id/textView4"
@@ -36,15 +36,16 @@
         android:text="Giocatore 2"
         android:textSize="17sp"
         android:textColor="@color/red"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintBottom_toTopOf="@+id/player2editText"
+        app:layout_constraintStart_toStartOf="@+id/player2editText" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/player1editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
         android:ems="10"
+        android:maxLength="8"
         android:hint="@string/hint"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,17 +54,18 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/player2editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:ems="10"
+        android:maxLength="8"
         android:hint="@string/hint"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/player1editText" />
 
     <Button
         android:id="@+id/buttonAvvia"
@@ -77,11 +79,11 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintTop_toBottomOf="@+id/player2editText" />
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="62dp"
+        android:layout_width="63dp"
         android:layout_height="63dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
