--- a/PetrisNetsGame/app/src/main/res/layout/activity_main.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_main.xml
@@ -21,17 +21,31 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSingle"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/button_play"
-        android:onClick="buttonGiocaOnClick"
-        android:text="@string/play"
-        android:textSize="20sp"
+        android:text="@string/onePlayer"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/buttonTwo"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="@string/twoPlayers"
+        android:textStyle="bold"
+        android:onClick="buttonTwoPlayersOnCLick"
+        android:background="@drawable/button_play"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSingle" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
