--- a/PetrisNetsGame/app/src/main/res/values/colors.xml
+++ b/PetrisNetsGame/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="splash">#FFE082</color>
     <color name="barra">#FFCC80</color>
     <color name="pause">#C6FF00</color>
+    <color name="sfondo_pausa">#FFF8E1</color>
+    <color name="verde">#00E676</color>
 </resources>
