--- a/PetrisNetsGame/app/src/main/res/layout/multiplayer_rules_popup.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/multiplayer_rules_popup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sfondo_pausa">
+    android:background="#6B04FFE2">
 
     <TextView
         android:id="@+id/textView10"
