--- a/PetrisNetsGame/app/src/main/res/layout/activity_game.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_game.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:textSize="20sp"
+        android:fontFamily="@font/comfortaa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.119"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,7 @@
         android:id="@+id/imageNet"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="48dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -47,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/button_transition"
         android:onClick="startT1"
         android:text="@string/t1"
@@ -70,13 +71,13 @@
         android:id="@+id/buttonT2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/button_transition"
         android:onClick="startT2"
         android:text="@string/t2"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/buttonT3"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toEndOf="@+id/buttonT1"
         app:layout_constraintTop_toBottomOf="@+id/imageNet" />
 
@@ -84,7 +85,7 @@
         android:id="@+id/buttonT3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/button_transition"
         android:onClick="startT3"
