--- a/PetrisNetsGame/app/src/main/res/layout/activity_players.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_players.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
         android:text="@string/insert_names"
-        android:textSize="28sp"
+        android:textSize="24sp"
+        android:fontFamily="@font/comfortaa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,13 +76,14 @@
         android:id="@+id/buttonAvvia"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="84dp"
         android:background="@drawable/button_play"
         android:onClick="buttonAvviaOnClick"
         android:text="@string/start"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.835"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/player2editText" />
 
@@ -102,13 +104,14 @@
         android:id="@+id/buttonRules"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="84dp"
         android:background="@drawable/button_rules"
         android:onClick="buttonRulesOnClick"
         android:text="Regole"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/player2editText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
