--- a/PetrisNetsGame/app/src/main/res/layout/multiplayer_rules_popup.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/multiplayer_rules_popup.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FDCE3F">
+    android:background="@drawable/popup_rules">
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="- Inizia il Giocatore 1"
+        android:fontFamily="@font/cherry_swash"
+        android:text="@string/player1_start"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -23,6 +23,7 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/cherry_swash"
         android:text="@string/game_target1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +36,7 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/cherry_swash"
         android:text="@string/game_target2"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +49,7 @@
         android:layout_width="320sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/cherry_swash"
         android:text="@string/game_target3"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView19"
@@ -61,7 +64,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="REGOLE"
+        android:fontFamily="@font/cherry_swash"
+        android:text="@string/rules_title"
         android:textColor="@color/blue"
         android:textSize="40sp"
         android:textStyle="bold"
