--- a/PetrisNetsGame/app/src/main/res/drawable/button_back.xml
+++ b/PetrisNetsGame/app/src/main/res/drawable/button_back.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+<selector xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
+    <item tools:ignore="ExtraText">
         android:src="@drawable/ic_arrow_back"
         <shape
             android:shape="oval">
