--- a/PetrisNetsGame/app/src/main/res/drawable/popup_background.xml
+++ b/PetrisNetsGame/app/src/main/res/drawable/popup_background.xml
@@ -3,9 +3,8 @@
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="@color/green"/>
-            <corners android:radius="100dp"/>
-            <stroke android:color="@color/black" android:width="2dp"/>
+            <solid android:color="@color/sfondo_pausa"/>
+            <stroke android:color="@color/green" android:width="3dp"/>
         </shape>
 
 
