--- a/PetrisNetsGame/app/src/main/res/layout/activity_main.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="184dp"
+        android:fontFamily="@font/luckiest_guy"
         android:text="@string/app_name"
-        android:textColor="#777373"
+        android:textColor="#E91E63"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.467"
