--- a/PetrisNetsGame/app/src/main/res/layout/activity_players.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_players.xml
@@ -55,7 +55,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:ignore="Autofill" />
 
     <EditText
         android:id="@+id/player2editText"
@@ -70,7 +71,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player1editText" />
+        app:layout_constraintTop_toBottomOf="@+id/player1editText"
+        tools:ignore="Autofill" />
 
     <Button
         android:id="@+id/buttonAvvia"
@@ -80,7 +82,7 @@
         android:background="@drawable/button_play"
         android:onClick="buttonAvviaOnClick"
         android:text="@string/start"
-        android:textSize="20sp"
+
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.835"
@@ -98,7 +100,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_arrow_back"
-        tools:ignore="SpeakableTextPresentCheck" />
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/buttonRules"
@@ -107,8 +109,7 @@
         android:layout_marginTop="84dp"
         android:background="@drawable/button_rules"
         android:onClick="buttonRulesOnClick"
-        android:text="Regole"
-        android:textSize="20sp"
+        android:text="@string/rules_title"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.153"
