--- a/PetrisNetsGame/app/src/main/res/layout/finish_player1_popup.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/finish_player1_popup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MultiplayerGameActivity_player1"
-    android:background="@color/sfondo_pausa">
+    android:background="@drawable/popup_background">
 
 
     <TextView
@@ -15,7 +15,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/bangers"
         android:text="@string/congratulations"
-        android:textColor="@color/verde"
+        android:textColor="@color/green"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +66,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
         android:textColor="@color/red"
-        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +76,7 @@
 
     <Button
         android:id="@+id/buttonInizia"
-        android:layout_width="wrap_content"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:background="@drawable/button_play"
