--- a/PetrisNetsGame/app/src/main/res/layout/finish_player2_popup.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/finish_player2_popup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sfondo_pausa"
+    android:background="@drawable/popup_background"
     tools:context=".MultiplayerGameActivity_player1">
 
 
@@ -15,7 +15,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/bangers"
         android:text="@string/congratulations"
-        android:textColor="@color/verde"
+        android:textColor="@color/green"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
         android:layout_height="24dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/comfortaa"
-        android:text="ha concluso con il tempo di:"
+        android:text="@string/player_finish_string"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -91,6 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:text="@string/the_winner_is"
+        android:textColor="@color/yellow"
         android:textSize="30sp"
         android:fontFamily="@font/bangers"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,11 +119,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:background="@drawable/button_play"
-        android:text="Restart"
+        android:text="@string/restart"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView17"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+        app:layout_constraintTop_toBottomOf="@+id/textView21"
+        app:layout_constraintVertical_bias="0.663" />
 
     <Button
         android:id="@+id/buttonHome"
@@ -130,17 +132,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:background="@drawable/button_home"
-        android:text="Home"
+        android:text="@string/home"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView17"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+        app:layout_constraintTop_toBottomOf="@+id/textView21"
+        app:layout_constraintVertical_bias="0.663" />
 
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="44dp"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -155,7 +158,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/winnerText"
         app:layout_constraintVertical_bias="1.0" />
