--- a/PetrisNetsGame/app/src/main/res/values/preloaded_fonts.xml
+++ b/PetrisNetsGame/app/src/main/res/values/preloaded_fonts.xml
@@ -2,7 +2,12 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/bangers</item>
+        <item>@font/berkshire_swash</item>
+        <item>@font/bungee_shade</item>
+        <item>@font/carrois_gothic_sc</item>
+        <item>@font/cherry_swash</item>
         <item>@font/comfortaa</item>
         <item>@font/comfortaa_light</item>
+        <item>@font/luckiest_guy</item>
     </array>
 </resources>
