--- a/PetrisNetsGame/app/src/main/res/layout/finish_player2_popup.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/finish_player2_popup.xml
@@ -90,11 +90,12 @@
         android:layout_width="160sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
+        android:fontFamily="@font/bangers"
         android:text="@string/the_winner_is"
         android:textColor="@color/yellow"
         android:textSize="30sp"
-        android:fontFamily="@font/bangers"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeFinishPlayer1Text" />
 
@@ -133,6 +134,7 @@
         android:layout_marginStart="32dp"
         android:background="@drawable/button_home"
         android:text="@string/home"
+
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView17"
         app:layout_constraintStart_toStartOf="parent"
@@ -162,5 +164,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/winnerText"
         app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="63dp"
+        android:layout_height="78dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView20"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timeFinishPlayer1Text"
+        app:srcCompat="@drawable/trofeo"
+        tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
