--- a/PetrisNetsGame/app/src/main/res/layout/activity_splash.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_splash.xml
@@ -10,11 +10,11 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
         android:src="@mipmap/ic_launcher"
-        tools:ignore="ContentDescription">
-    </ImageView>
+        tools:ignore="ContentDescription"></ImageView>
 
 
 </RelativeLayout>
