--- a/PetrisNetsGame/app/src/main/res/layout/activity_main.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,8 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/logo" />
+        tools:srcCompat="@drawable/logo"
+        tools:ignore="ContentDescription" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
