--- a/PetrisNetsGame/app/src/main/res/layout/activity_splash.xml
+++ b/PetrisNetsGame/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,7 @@
         android:layout_height="150dp"
         android:layout_centerInParent="true"
         android:src="@mipmap/ic_launcher"
-        tools:ignore="ContentDescription"></ImageView>
+        tools:ignore="ContentDescription" />
 
 
 </RelativeLayout>
